--- a/config.toml
+++ b/config.toml
@@ -29,7 +29,7 @@ theme = "minimalist"
   # by entering your username. The links to your account will be
   # create automatically.
   twitter   = "SteBjoerne"
-  facebook  = "stephane.bis"
+  facebook  = ""
   linkedin  = ""
   behance   = ""
   dribbble  = ""
