Add draft for time for growth

--- a/config.toml
+++ b/config.toml
@@ -3,7 +3,6 @@ DefaultContentLanguage = "en"
 #DefaultContentLanguage = "ja"
 title = "Code Lilies"
 theme = "beautifulhugo"
-metaDataFormat = "yaml"
 pygmentsStyle = "monokai"
 pygmentsUseClasses = true
 pygmentsCodeFences = true
@@ -22,7 +21,7 @@ disqusShortname = "codelilies"
   logo = "images/profile.png"
   favicon = "img/favicon.ico"
   dateFormat = "January 2, 2006"
-  commit = true
+  commit = false
   rss = false
   comments = true
   readingTime = true
