Enable RSS feeds

--- a/config.toml
+++ b/config.toml
@@ -22,7 +22,7 @@ disqusShortname = "codelilies"
   favicon = "img/favicon.ico"
   dateFormat = "January 2, 2006"
   commit = false
-  rss = false
+  rss = true
   comments = true
   readingTime = true
   useHLJS = false
